homework/7.advanced-abstractions/6_service-prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: prometheus
  type: ClusterIP
